# mauikit-texteditor

./: .gitignore  .kde-ci.yml  CMakeLists.txt  Mainpage.dox  MauiKitTextEditorConfig.cmake.in  MauiKitTextEditorConfig.cmake.in.5  MauiKitTextEditorConfig.cmake.in.6  Messages.sh  README.md  TextEditorConfig.cmake.in  mauitexteditor.kdev4  metainfo.yaml  texteditor-maui.kdev4
examples/: ColorSchemesPage.qml  KirigamiExample.qml  TextEditor.qml
po/ar/: mauikittexteditor.po
po/ca/: MauiKitTextEditorPlugin.po  mauikittexteditor.po
po/ca@valencia/: MauiKitTextEditorPlugin.po  mauikittexteditor.po
po/cs/: mauikittexteditor.po
po/de/: MauiKitTextEditorPlugin.po  mauikittexteditor.po
po/en_GB/: mauikittexteditor.po
po/eo/: mauikittexteditor.po
po/es/: MauiKitTextEditorPlugin.po  mauikittexteditor.po
po/eu/: MauiKitTextEditorPlugin.po  mauikittexteditor.po
po/fi/: mauikittexteditor.po
po/fr/: MauiKitTextEditorPlugin.po  mauikittexteditor.po
po/ga/: mauikittexteditor.po
po/gl/: mauikittexteditor.po
po/he/: mauikittexteditor.po
po/it/: mauikittexteditor.po
po/ja/: mauikittexteditor.po
po/ka/: mauikittexteditor.po
po/ko/: mauikittexteditor.po
po/lt/: mauikittexteditor.po
po/lv/: mauikittexteditor.po
po/nl/: MauiKitTextEditorPlugin.po  mauikittexteditor.po
po/nn/: mauikittexteditor.po
po/pl/: mauikittexteditor.po
po/pt/: mauikittexteditor.po
po/pt_BR/: mauikittexteditor.po
po/sa/: mauikittexteditor.po
po/sk/: mauikittexteditor.po
po/sl/: MauiKitTextEditorPlugin.po  mauikittexteditor.po
po/sv/: mauikittexteditor.po
po/tr/: MauiKitTextEditorPlugin.po  mauikittexteditor.po
po/uk/: MauiKitTextEditorPlugin.po  mauikittexteditor.po
po/zh_CN/: mauikittexteditor.po
po/zh_TW/: mauikittexteditor.po
src/: CMakeLists.txt  resources.qrc
src/code/: colorschemesmodel.cpp  colorschemesmodel.h  documenthandler.cpp  documenthandler.h  linenumbermodel.cpp  linenumbermodel.h  moduleinfo.cpp  moduleinfo.h  texteditor_plugin.cpp  texteditor_plugin.h
src/code/commands/: cropcommand.h
src/controls/: TextEditor.qml  qmldir
src/controls.5/: ColorSchemesPage.qml  TextEditor.qml
src/controls.6/: ColorSchemesPage.qml  TextEditor.qml  qmldir
